[gd_scene load_steps=27 format=3 uid="uid://dai086rmd3g3s"]

[ext_resource type="Texture2D" uid="uid://dvil1ok7epdck" path="res://asset/images/gui/inventory/gui_inventory_background.png" id="1_2f75n"]
[ext_resource type="Script" path="res://gui/inventory_ui.gd" id="2_oohwf"]
[ext_resource type="Texture2D" uid="uid://lhsw50w1nwyd" path="res://asset/images/gui/inventory/gui_inventory_card_cover.png" id="3_48v0v"]
[ext_resource type="PackedScene" uid="uid://rcw4wnrlmx6u" path="res://gui/inv_gear_ui.tscn" id="4_06f47"]
[ext_resource type="PackedScene" uid="uid://brklqbmf4n8bi" path="res://gui/item_card_ui.tscn" id="6_ylots"]
[ext_resource type="Texture2D" uid="uid://boowax7ow4uom" path="res://asset/images/equipment/weapon/melee/gui_melee.png" id="7_umora"]
[ext_resource type="Script" path="res://item/melee_weapon.gd" id="8_y4pxd"]
[ext_resource type="Script" path="res://item/knife.gd" id="9_ssm47"]
[ext_resource type="Texture2D" uid="uid://3amhjsr2gevu" path="res://asset/images/equipment/weapon/pistol/gui_pistol.png" id="10_0hhn8"]
[ext_resource type="Script" path="res://item/pistol.gd" id="11_vsdny"]
[ext_resource type="Texture2D" uid="uid://bb5h2ev7gk3ua" path="res://asset/images/equipment/weapon/main/gui_main_weapon.png" id="12_um7jk"]
[ext_resource type="Script" path="res://item/main_weapon.gd" id="13_780d3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qqu7u"]
atlas = ExtResource("3_48v0v")
region = Rect2(179, 134, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3cpn"]
atlas = ExtResource("3_48v0v")
region = Rect2(179, 184, 46, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_smpb1"]
atlas = ExtResource("3_48v0v")
region = Rect2(228, 197, 40, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5uxh"]
atlas = ExtResource("3_48v0v")
region = Rect2(128, 185, 39, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_37get"]
atlas = ExtResource("3_48v0v")
region = Rect2(128, 134, 47, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4l3f"]
atlas = ExtResource("3_48v0v")
region = Rect2(0, 231, 169, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttmnv"]
atlas = ExtResource("3_48v0v")
region = Rect2(178, 245, 45, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6kn2"]
atlas = ExtResource("3_48v0v")
region = Rect2(227, 133, 43, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgb8t"]
atlas = ExtResource("3_48v0v")
region = Rect2(62, 66, 97, 65)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad1hj"]
atlas = ExtResource("3_48v0v")
region = Rect2(0, 0, 227, 66)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bgpf6"]
load_path = "res://.godot/imported/gui_inventory_card_cover.png-30a661c9030f823e11d01e8f5bf10b84.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6tr5p"]
atlas = SubResource("CompressedTexture2D_bgpf6")
region = Rect2(160, 66, 65, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap3ss"]
atlas = SubResource("CompressedTexture2D_bgpf6")
region = Rect2(62, 132, 62, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjj1a"]
atlas = SubResource("CompressedTexture2D_bgpf6")
region = Rect2(0, 66, 60, 143)

[node name="InventoryUI" type="TextureRect"]
offset_right = 513.0
offset_bottom = 419.0
texture = ExtResource("1_2f75n")
stretch_mode = 2
script = ExtResource("2_oohwf")

[node name="EquipArea" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 122.0
offset_top = 1.0
offset_right = 355.0
offset_bottom = 274.0

[node name="Icons" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0

[node name="ClothesBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 149.0
offset_top = 84.0
offset_right = 197.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_qqu7u")

[node name="PantsBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 149.0
offset_top = 148.0
offset_right = 195.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_a3cpn")

[node name="HelmetBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 235.0
offset_top = 17.0
offset_right = 275.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_smpb1")

[node name="VestBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 150.0
offset_top = 16.0
offset_right = 193.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_i5uxh")

[node name="BackpackBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 214.0
offset_top = 213.5
offset_right = 261.0
offset_bottom = 260.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_37get")

[node name="MainWeaponBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
offset_left = 299.0
offset_top = 196.0
offset_right = 428.0
offset_bottom = 239.0
rotation = -1.5708
texture = SubResource("AtlasTexture_a4l3f")
expand_mode = 1

[node name="PistolBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 301.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ttmnv")
expand_mode = 1

[node name="MeleeWeaponBgIcon" type="TextureRect" parent="Icons"]
layout_mode = 1
anchors_preset = -1
offset_left = 236.0
offset_top = 149.0
offset_right = 273.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_e6kn2")
expand_mode = 1

[node name="Cards" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 122.0
offset_top = 3.0
offset_right = 352.0
offset_bottom = 270.0
mouse_filter = 1

[node name="PlayerSlot" parent="Cards" instance=ExtResource("4_06f47")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 117.0
offset_top = 88.0
offset_right = 147.0
offset_bottom = 118.0
max_slot_number = 1

[node name="Icon" parent="Cards/PlayerSlot" index="0"]
visible = false

[node name="Name" parent="Cards/PlayerSlot" index="1"]
visible = false

[node name="Durability" parent="Cards/PlayerSlot" index="2"]
visible = false

[node name="Slots" parent="Cards/PlayerSlot" index="3"]
visible = false

[node name="Items" parent="Cards/PlayerSlot" index="4"]
offset_left = 0.0
offset_top = 0.0
offset_right = 30.0
offset_bottom = 30.0

[node name="ClothesCard" parent="Cards" instance=ExtResource("4_06f47")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 72.0
offset_right = 99.0
offset_bottom = 137.0
texture = SubResource("AtlasTexture_wgb8t")
max_slot_number = 3
equipment_type = 1

[node name="PantsCard" parent="Cards" instance=ExtResource("4_06f47")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 137.0
offset_right = 99.0
offset_bottom = 202.0
texture = SubResource("AtlasTexture_wgb8t")
max_slot_number = 3
equipment_type = 2

[node name="VestCard" parent="Cards" instance=ExtResource("4_06f47")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 5.0
offset_right = 99.0
offset_bottom = 70.0
texture = SubResource("AtlasTexture_wgb8t")
max_slot_number = 3
equipment_type = 4

[node name="BackpackCard" parent="Cards" instance=ExtResource("4_06f47")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 202.0
offset_right = 229.0
offset_bottom = 268.0
texture = SubResource("AtlasTexture_ad1hj")
max_slot_number = 7
equipment_type = 5

[node name="HelmetCard" parent="Cards" groups=["item_cards"] instance=ExtResource("6_ylots")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 5.0
offset_right = 165.0
offset_bottom = 69.0
texture = SubResource("AtlasTexture_6tr5p")
column_number = 4
can_drop_item_list = Array[GDScript]([])
equipment_type = 3

[node name="Icon" parent="Cards/HelmetCard" index="0"]
offset_left = -16.5
offset_top = -23.0
offset_right = 15.5
offset_bottom = 9.0

[node name="Info" parent="Cards/HelmetCard" index="1"]
offset_top = -20.0
offset_right = -2.0
offset_bottom = -2.0

[node name="NumberOrDurability" parent="Cards/HelmetCard/Info" index="0"]
offset_right = -2.0
offset_bottom = -2.0

[node name="MeleeWeaponCard" parent="Cards" groups=["item_cards"] instance=ExtResource("6_ylots")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 137.0
offset_right = 165.0
offset_bottom = 201.0
texture = SubResource("AtlasTexture_6tr5p")
atlas_texture = ExtResource("7_umora")
column_number = 7
icon_size = Vector2(44, 44)
can_drop_item_list = Array[GDScript]([ExtResource("8_y4pxd"), ExtResource("9_ssm47")])
equipment_type = 8

[node name="Info" parent="Cards/MeleeWeaponCard" index="1"]
offset_top = -20.0
offset_right = -2.0
offset_bottom = -2.0

[node name="NumberOrDurability" parent="Cards/MeleeWeaponCard/Info" index="0"]
offset_right = -2.0
offset_bottom = -2.0

[node name="PistolCard" parent="Cards" groups=["item_cards"] instance=ExtResource("6_ylots")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 167.0
offset_top = 3.0
offset_right = 229.0
offset_bottom = 58.0
texture = SubResource("AtlasTexture_ap3ss")
atlas_texture = ExtResource("10_0hhn8")
atlas_texture_id_offset = -25
column_number = 4
icon_size = Vector2(82, 82)
can_drop_item_list = Array[GDScript]([ExtResource("11_vsdny")])
equipment_type = 7

[node name="Icon" parent="Cards/PistolCard" index="0"]
offset_left = -28.0
offset_top = -27.5
offset_right = 28.0
offset_bottom = 28.5
expand_mode = 1
stretch_mode = 5

[node name="Info" parent="Cards/PistolCard" index="1"]
offset_top = -20.0
offset_right = -1.0
offset_bottom = -1.0

[node name="NumberOrDurability" parent="Cards/PistolCard/Info" index="0"]
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -5.5
offset_right = 29.0
offset_bottom = 6.5
grow_horizontal = 1

[node name="BulletNumber" parent="Cards/PistolCard/Info" index="1"]
offset_left = -24.0
offset_top = -5.5
offset_right = -4.0
offset_bottom = 6.5

[node name="MainWeaponCard" parent="Cards" groups=["item_cards"] instance=ExtResource("6_ylots")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 168.0
offset_top = 59.0
offset_right = 228.0
offset_bottom = 202.0
texture = SubResource("AtlasTexture_sjj1a")
atlas_texture = ExtResource("12_um7jk")
icon_size = Vector2(68, 185)
can_drop_item_list = Array[GDScript]([ExtResource("13_780d3")])
equipment_type = 6

[node name="Icon" parent="Cards/MainWeaponCard" index="0"]
offset_left = -23.0
offset_top = -62.5
offset_right = 23.0
offset_bottom = 62.5
expand_mode = 1
stretch_mode = 5

[node name="Info" parent="Cards/MainWeaponCard" index="1"]
offset_top = -20.0
offset_right = -1.0
offset_bottom = -1.0

[node name="NumberOrDurability" parent="Cards/MainWeaponCard/Info" index="0"]
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -5.5
offset_right = 29.0
offset_bottom = 6.5
grow_horizontal = 1

[node name="BulletNumber" parent="Cards/MainWeaponCard/Info" index="1"]
offset_left = -23.0
offset_top = -5.5
offset_right = -3.0
offset_bottom = 6.5

[node name="ItemOnGround" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 6.0
offset_right = 120.0
offset_bottom = 270.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="PickPileItems" type="VBoxContainer" parent="ItemOnGround"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[editable path="Cards/PlayerSlot"]
[editable path="Cards/HelmetCard"]
[editable path="Cards/MeleeWeaponCard"]
[editable path="Cards/PistolCard"]
[editable path="Cards/MainWeaponCard"]
